--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "react": "^16.9.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.9.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-spring": "^8.0.27",
     "reactstrap": "^8.0.1"
   },
   "scripts": {
