--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-scroll": "^1.7.14",
     "react-spring": "^8.0.27",
     "reactstrap": "^8.0.1"
   },
